cambios pass jejeje

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.username=dialv
 spring.datasource.password=avasacreer
 
 #spring security
-spring.security.user.name=<betillo>
-spring.security.user.password=<abuelitatrivial>
+spring.security.user.name=betillo
+spring.security.user.password=abuelitatrivial
