agregado controllers y ruteo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,11 @@ spring.datasource.password=avasacreer
 #spring security
 spring.security.user.name=betillo
 spring.security.user.password=abuelitatrivial
+
+
+# ===============================
+# = Thymeleaf configurations
+# ===============================
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.cache=false
+
