--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@
 # ==============================
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/SISADMRH
-#spring.datasource.username=dialv
-#spring.datasource.password=avasacreer
+spring.datasource.username=dialv
+spring.datasource.password=avasacreer
 # ==============================
 # --- JPA / Hibernate
 # ==============================
@@ -12,8 +12,8 @@
 # Database
 #spring.datasource.url=jdbc:mysql://localhost:3306/springbootdb
 spring.datasource.url=jdbc:mysql://localhost:3306/SISADMRH
-spring.datasource.username=root
-spring.datasource.password=Password$$12
+#spring.datasource.username=root
+#spring.datasource.password=Password$$12
 
 spring.jpa.hibernate.ddl-auto=update
 
