--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@
 # ==============================
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/SISADMRH
-spring.datasource.username=dialv
-spring.datasource.password=avasacreer
+spring.datasource.username= cultura
+spring.datasource.password= ingeniero2017
 # ==============================
 # --- JPA / Hibernate
 # ==============================
