--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,8 @@
 # ==============================
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/SISADMRH
-#spring.datasource.username= root
-#spring.datasource.password= Password$$12
-#spring.datasource.url=jdbc:mysql://localhost:3306/SISADMRH
-spring.datasource.username= dialv
-spring.datasource.password= avasacreer
+#spring.datasource.username=dialv
+#spring.datasource.password=avasacreer
 # ==============================
 # --- JPA / Hibernate
 # ==============================
@@ -16,14 +13,15 @@ spring.datasource.password= avasacreer
 #spring.datasource.url=jdbc:mysql://localhost:3306/springbootdb
 spring.datasource.url=jdbc:mysql://localhost:3306/SISADMRH
 spring.datasource.username=root
-spring.datasource.password=password$$12
+spring.datasource.password=Password$$12
 
 spring.jpa.hibernate.ddl-auto=update
 
 
 #spring security
-spring.security.user.name=amachuca
-spring.security.user.password=12345678
+spring.security.user.name=betillo
+spring.security.user.password=abuelitatrivial
+
 
 
 # ===============================
@@ -31,4 +29,3 @@ spring.security.user.password=12345678
 # ===============================
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
-
