comit de ruta remota

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 #spring.datasource.username= root
 #spring.datasource.password= Password$$12
 #spring.datasource.url=jdbc:mysql://localhost:3306/SISADMRH
-spring.datasource.username= dialv
+spring.datasource.username= root
 spring.datasource.password= avasacreer
 # ==============================
 # --- JPA / Hibernate
@@ -14,7 +14,7 @@ spring.datasource.password= avasacreer
 #logging.level.org.h2.server: DEBUG
 # Database
 #spring.datasource.url=jdbc:mysql://localhost:3306/springbootdb
-spring.datasource.url=jdbc:mysql://localhost:3306/SISADMRH
+spring.datasource.url=jdbc:mysql://46.101.33.208:3306/SISADMRH
 #spring.datasource.username=root
 #spring.datasource.password=password$$12
 
